code/force-app/main/default/objects/omnistudio__DRWorker__c/fields/omnistudio__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__ApexJobId__c</fullName>
    <description>Job Id of this Worker</description>
    <label>Apex Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>