code/force-app/main/default/objects/omnistudio__DRWorker__c/fields/omnistudio__DRObjectName__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__DRObjectName__c</fullName>
    <description>Name of DataRaptor Object being processed currently.</description>
    <label>DataRaptor Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>