code/force-app/main/default/objects/omnistudio__DRWorker__c/fields/omnistudio__DRStatus__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__DRStatus__c</fullName>
    <description>Status being processed</description>
    <label>DataRaptor Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>