code/force-app/main/default/objects/omnistudio__DRWorker__c/fields/omnistudio__StartedAt__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__StartedAt__c</fullName>
    <description>Time when DR Batch Job began.</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>